lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> START
Rule 1     START -> START INSTRUCTION
Rule 2     START -> INSTRUCTION
Rule 3     INSTRUCTION -> { START }
Rule 4     INSTRUCTION -> ASSIGN_EXP
Rule 5     INSTRUCTION -> IF_INSTRUCTION
Rule 6     INSTRUCTION -> WHILE_INSTRUCTION
Rule 7     INSTRUCTION -> FOR_INSTRUCTION
Rule 8     INSTRUCTION -> PRINT_FUN
Rule 9     INSTRUCTION -> RETURN_FUN
Rule 10    INSTRUCTION -> BREAK ;
Rule 11    INSTRUCTION -> CONTINUE ;
Rule 12    VECTOR -> [ LIST_VALUE ]
Rule 13    STRING_GR -> STRING
Rule 14    INT_GR -> INTNUM
Rule 15    FLOAT_GR -> FLOATNUM
Rule 16    ID_GR -> ID
Rule 17    VALUE -> INT_GR
Rule 18    VALUE -> FLOAT_GR
Rule 19    VALUE -> ID_GR
Rule 20    VALUE -> STRING_GR
Rule 21    VALUE -> EYE ( ARITHMETIC_EXP )
Rule 22    VALUE -> ZEROS ( ARITHMETIC_EXP )
Rule 23    VALUE -> ONES ( ARITHMETIC_EXP )
Rule 24    VALUE -> VECTOR
Rule 25    VALUE -> ID_GR VECTOR
Rule 26    VALUE -> VALUE '
Rule 27    LIST_VALUE -> ARITHMETIC_EXP
Rule 28    LIST_VALUE -> ARITHMETIC_EXP , LIST_VALUE
Rule 29    ARITHMETIC_OP -> +
Rule 30    ARITHMETIC_OP -> -
Rule 31    ARITHMETIC_OP -> *
Rule 32    ARITHMETIC_OP -> /
Rule 33    ARITHMETIC_OP -> DOTADD
Rule 34    ARITHMETIC_OP -> DOTSUB
Rule 35    ARITHMETIC_OP -> DOTMUL
Rule 36    ARITHMETIC_OP -> DOTDIV
Rule 37    ASSIGN_OP -> ADDASSIGN
Rule 38    ASSIGN_OP -> SUBASSIGN
Rule 39    ASSIGN_OP -> MULASSIGN
Rule 40    ASSIGN_OP -> DIVASSIGN
Rule 41    ASSIGN_OP -> =
Rule 42    RELATION_OP -> GT
Rule 43    RELATION_OP -> LT
Rule 44    RELATION_OP -> LE
Rule 45    RELATION_OP -> GE
Rule 46    RELATION_OP -> NE
Rule 47    RELATION_OP -> EQ
Rule 48    ARITHMETIC_OP_UNARY -> +
Rule 49    ARITHMETIC_OP_UNARY -> -
Rule 50    ARITHMETIC_EXP -> ARITHMETIC_EXP ARITHMETIC_OP ARITHMETIC_EXP
Rule 51    ARITHMETIC_EXP -> ( ARITHMETIC_EXP )
Rule 52    ARITHMETIC_EXP -> ARITHMETIC_OP_UNARY ARITHMETIC_EXP
Rule 53    ARITHMETIC_EXP -> VALUE
Rule 54    RELATION_EXP -> ARITHMETIC_EXP RELATION_OP ARITHMETIC_EXP
Rule 55    RELATION_EXP -> ( RELATION_EXP )
Rule 56    ASSIGN_EXP -> ID_GR ASSIGN_OP ARITHMETIC_EXP ;
Rule 57    ASSIGN_EXP -> ID_GR [ LIST_VALUE ] ASSIGN_OP ARITHMETIC_EXP ;
Rule 58    IF_INSTRUCTION -> IF ( RELATION_EXP ) INSTRUCTION
Rule 59    IF_INSTRUCTION -> IF ( RELATION_EXP ) INSTRUCTION ELSE INSTRUCTION
Rule 60    WHILE_INSTRUCTION -> WHILE ( RELATION_EXP ) INSTRUCTION
Rule 61    FOR_INSTRUCTION -> FOR ID_GR = ARITHMETIC_EXP : ARITHMETIC_EXP INSTRUCTION
Rule 62    PRINT_FUN -> PRINT LIST_VALUE ;
Rule 63    RETURN_FUN -> RETURN LIST_VALUE ;

Terminals, with rules where they appear

'                    : 26
(                    : 21 22 23 51 55 58 59 60
)                    : 21 22 23 51 55 58 59 60
*                    : 31
+                    : 29 48
,                    : 28
-                    : 30 49
/                    : 32
:                    : 61
;                    : 10 11 56 57 62 63
=                    : 41 61
ADDASSIGN            : 37
BREAK                : 10
CONTINUE             : 11
DIVASSIGN            : 40
DOTADD               : 33
DOTDIV               : 36
DOTMUL               : 35
DOTSUB               : 34
ELSE                 : 59
EQ                   : 47
EYE                  : 21
FLOATNUM             : 15
FOR                  : 61
GE                   : 45
GT                   : 42
ID                   : 16
IF                   : 58 59
INTNUM               : 14
LE                   : 44
LT                   : 43
MULASSIGN            : 39
NE                   : 46
ONES                 : 23
PRINT                : 62
RETURN               : 63
STRING               : 13
SUBASSIGN            : 38
WHILE                : 60
ZEROS                : 22
[                    : 12 57
]                    : 12 57
error                : 
{                    : 3
}                    : 3

Nonterminals, with rules where they appear

ARITHMETIC_EXP       : 21 22 23 27 28 50 50 51 52 54 54 56 57 61 61
ARITHMETIC_OP        : 50
ARITHMETIC_OP_UNARY  : 52
ASSIGN_EXP           : 4
ASSIGN_OP            : 56 57
FLOAT_GR             : 18
FOR_INSTRUCTION      : 7
ID_GR                : 19 25 56 57 61
IF_INSTRUCTION       : 5
INSTRUCTION          : 1 2 58 59 59 60 61
INT_GR               : 17
LIST_VALUE           : 12 28 57 62 63
PRINT_FUN            : 8
RELATION_EXP         : 55 58 59 60
RELATION_OP          : 54
RETURN_FUN           : 9
START                : 1 3 0
STRING_GR            : 20
VALUE                : 26 53
VECTOR               : 24 25
WHILE_INSTRUCTION    : 6

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . START INSTRUCTION
    (2) START -> . INSTRUCTION
    (3) INSTRUCTION -> . { START }
    (4) INSTRUCTION -> . ASSIGN_EXP
    (5) INSTRUCTION -> . IF_INSTRUCTION
    (6) INSTRUCTION -> . WHILE_INSTRUCTION
    (7) INSTRUCTION -> . FOR_INSTRUCTION
    (8) INSTRUCTION -> . PRINT_FUN
    (9) INSTRUCTION -> . RETURN_FUN
    (10) INSTRUCTION -> . BREAK ;
    (11) INSTRUCTION -> . CONTINUE ;
    (56) ASSIGN_EXP -> . ID_GR ASSIGN_OP ARITHMETIC_EXP ;
    (57) ASSIGN_EXP -> . ID_GR [ LIST_VALUE ] ASSIGN_OP ARITHMETIC_EXP ;
    (58) IF_INSTRUCTION -> . IF ( RELATION_EXP ) INSTRUCTION
    (59) IF_INSTRUCTION -> . IF ( RELATION_EXP ) INSTRUCTION ELSE INSTRUCTION
    (60) WHILE_INSTRUCTION -> . WHILE ( RELATION_EXP ) INSTRUCTION
    (61) FOR_INSTRUCTION -> . FOR ID_GR = ARITHMETIC_EXP : ARITHMETIC_EXP INSTRUCTION
    (62) PRINT_FUN -> . PRINT LIST_VALUE ;
    (63) RETURN_FUN -> . RETURN LIST_VALUE ;
    (16) ID_GR -> . ID

    {               shift and go to state 3
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 18

    START                          shift and go to state 1
    INSTRUCTION                    shift and go to state 2
    ASSIGN_EXP                     shift and go to state 4
    IF_INSTRUCTION                 shift and go to state 5
    WHILE_INSTRUCTION              shift and go to state 6
    FOR_INSTRUCTION                shift and go to state 7
    PRINT_FUN                      shift and go to state 8
    RETURN_FUN                     shift and go to state 9
    ID_GR                          shift and go to state 12

state 1

    (0) S' -> START .
    (1) START -> START . INSTRUCTION
    (3) INSTRUCTION -> . { START }
    (4) INSTRUCTION -> . ASSIGN_EXP
    (5) INSTRUCTION -> . IF_INSTRUCTION
    (6) INSTRUCTION -> . WHILE_INSTRUCTION
    (7) INSTRUCTION -> . FOR_INSTRUCTION
    (8) INSTRUCTION -> . PRINT_FUN
    (9) INSTRUCTION -> . RETURN_FUN
    (10) INSTRUCTION -> . BREAK ;
    (11) INSTRUCTION -> . CONTINUE ;
    (56) ASSIGN_EXP -> . ID_GR ASSIGN_OP ARITHMETIC_EXP ;
    (57) ASSIGN_EXP -> . ID_GR [ LIST_VALUE ] ASSIGN_OP ARITHMETIC_EXP ;
    (58) IF_INSTRUCTION -> . IF ( RELATION_EXP ) INSTRUCTION
    (59) IF_INSTRUCTION -> . IF ( RELATION_EXP ) INSTRUCTION ELSE INSTRUCTION
    (60) WHILE_INSTRUCTION -> . WHILE ( RELATION_EXP ) INSTRUCTION
    (61) FOR_INSTRUCTION -> . FOR ID_GR = ARITHMETIC_EXP : ARITHMETIC_EXP INSTRUCTION
    (62) PRINT_FUN -> . PRINT LIST_VALUE ;
    (63) RETURN_FUN -> . RETURN LIST_VALUE ;
    (16) ID_GR -> . ID

    {               shift and go to state 3
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 18

    INSTRUCTION                    shift and go to state 19
    ASSIGN_EXP                     shift and go to state 4
    IF_INSTRUCTION                 shift and go to state 5
    WHILE_INSTRUCTION              shift and go to state 6
    FOR_INSTRUCTION                shift and go to state 7
    PRINT_FUN                      shift and go to state 8
    RETURN_FUN                     shift and go to state 9
    ID_GR                          shift and go to state 12

state 2

    (2) START -> INSTRUCTION .

    {               reduce using rule 2 (START -> INSTRUCTION .)
    BREAK           reduce using rule 2 (START -> INSTRUCTION .)
    CONTINUE        reduce using rule 2 (START -> INSTRUCTION .)
    IF              reduce using rule 2 (START -> INSTRUCTION .)
    WHILE           reduce using rule 2 (START -> INSTRUCTION .)
    FOR             reduce using rule 2 (START -> INSTRUCTION .)
    PRINT           reduce using rule 2 (START -> INSTRUCTION .)
    RETURN          reduce using rule 2 (START -> INSTRUCTION .)
    ID              reduce using rule 2 (START -> INSTRUCTION .)
    $end            reduce using rule 2 (START -> INSTRUCTION .)
    }               reduce using rule 2 (START -> INSTRUCTION .)


state 3

    (3) INSTRUCTION -> { . START }
    (1) START -> . START INSTRUCTION
    (2) START -> . INSTRUCTION
    (3) INSTRUCTION -> . { START }
    (4) INSTRUCTION -> . ASSIGN_EXP
    (5) INSTRUCTION -> . IF_INSTRUCTION
    (6) INSTRUCTION -> . WHILE_INSTRUCTION
    (7) INSTRUCTION -> . FOR_INSTRUCTION
    (8) INSTRUCTION -> . PRINT_FUN
    (9) INSTRUCTION -> . RETURN_FUN
    (10) INSTRUCTION -> . BREAK ;
    (11) INSTRUCTION -> . CONTINUE ;
    (56) ASSIGN_EXP -> . ID_GR ASSIGN_OP ARITHMETIC_EXP ;
    (57) ASSIGN_EXP -> . ID_GR [ LIST_VALUE ] ASSIGN_OP ARITHMETIC_EXP ;
    (58) IF_INSTRUCTION -> . IF ( RELATION_EXP ) INSTRUCTION
    (59) IF_INSTRUCTION -> . IF ( RELATION_EXP ) INSTRUCTION ELSE INSTRUCTION
    (60) WHILE_INSTRUCTION -> . WHILE ( RELATION_EXP ) INSTRUCTION
    (61) FOR_INSTRUCTION -> . FOR ID_GR = ARITHMETIC_EXP : ARITHMETIC_EXP INSTRUCTION
    (62) PRINT_FUN -> . PRINT LIST_VALUE ;
    (63) RETURN_FUN -> . RETURN LIST_VALUE ;
    (16) ID_GR -> . ID

    {               shift and go to state 3
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 18

    START                          shift and go to state 20
    INSTRUCTION                    shift and go to state 2
    ASSIGN_EXP                     shift and go to state 4
    IF_INSTRUCTION                 shift and go to state 5
    WHILE_INSTRUCTION              shift and go to state 6
    FOR_INSTRUCTION                shift and go to state 7
    PRINT_FUN                      shift and go to state 8
    RETURN_FUN                     shift and go to state 9
    ID_GR                          shift and go to state 12

state 4

    (4) INSTRUCTION -> ASSIGN_EXP .

    {               reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    BREAK           reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    CONTINUE        reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    IF              reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    WHILE           reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    FOR             reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    PRINT           reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    RETURN          reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    ID              reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    $end            reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    }               reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)
    ELSE            reduce using rule 4 (INSTRUCTION -> ASSIGN_EXP .)


state 5

    (5) INSTRUCTION -> IF_INSTRUCTION .

    {               reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    BREAK           reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    CONTINUE        reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    IF              reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    WHILE           reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    FOR             reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    PRINT           reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    RETURN          reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    ID              reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    $end            reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    }               reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)
    ELSE            reduce using rule 5 (INSTRUCTION -> IF_INSTRUCTION .)


state 6

    (6) INSTRUCTION -> WHILE_INSTRUCTION .

    {               reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    BREAK           reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    CONTINUE        reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    IF              reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    WHILE           reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    FOR             reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    PRINT           reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    RETURN          reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    ID              reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    $end            reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    }               reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)
    ELSE            reduce using rule 6 (INSTRUCTION -> WHILE_INSTRUCTION .)


state 7

    (7) INSTRUCTION -> FOR_INSTRUCTION .

    {               reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    BREAK           reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    CONTINUE        reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    IF              reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    WHILE           reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    FOR             reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    PRINT           reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    RETURN          reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    ID              reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    $end            reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    }               reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)
    ELSE            reduce using rule 7 (INSTRUCTION -> FOR_INSTRUCTION .)


state 8

    (8) INSTRUCTION -> PRINT_FUN .

    {               reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    BREAK           reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    CONTINUE        reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    IF              reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    WHILE           reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    FOR             reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    PRINT           reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    RETURN          reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    ID              reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    $end            reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    }               reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)
    ELSE            reduce using rule 8 (INSTRUCTION -> PRINT_FUN .)


state 9

    (9) INSTRUCTION -> RETURN_FUN .

    {               reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    BREAK           reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    CONTINUE        reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    IF              reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    WHILE           reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    FOR             reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    PRINT           reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    RETURN          reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    ID              reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    $end            reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    }               reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)
    ELSE            reduce using rule 9 (INSTRUCTION -> RETURN_FUN .)


state 10

    (10) INSTRUCTION -> BREAK . ;

    ;               shift and go to state 21


state 11

    (11) INSTRUCTION -> CONTINUE . ;

    ;               shift and go to state 22


state 12

    (56) ASSIGN_EXP -> ID_GR . ASSIGN_OP ARITHMETIC_EXP ;
    (57) ASSIGN_EXP -> ID_GR . [ LIST_VALUE ] ASSIGN_OP ARITHMETIC_EXP ;
    (37) ASSIGN_OP -> . ADDASSIGN
    (38) ASSIGN_OP -> . SUBASSIGN
    (39) ASSIGN_OP -> . MULASSIGN
    (40) ASSIGN_OP -> . DIVASSIGN
    (41) ASSIGN_OP -> . =

    [               shift and go to state 24
    ADDASSIGN       shift and go to state 25
    SUBASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27
    DIVASSIGN       shift and go to state 28
    =               shift and go to state 29

    ASSIGN_OP                      shift and go to state 23

state 13

    (58) IF_INSTRUCTION -> IF . ( RELATION_EXP ) INSTRUCTION
    (59) IF_INSTRUCTION -> IF . ( RELATION_EXP ) INSTRUCTION ELSE INSTRUCTION

    (               shift and go to state 30


state 14

    (60) WHILE_INSTRUCTION -> WHILE . ( RELATION_EXP ) INSTRUCTION

    (               shift and go to state 31


state 15

    (61) FOR_INSTRUCTION -> FOR . ID_GR = ARITHMETIC_EXP : ARITHMETIC_EXP INSTRUCTION
    (16) ID_GR -> . ID

    ID              shift and go to state 18

    ID_GR                          shift and go to state 32

state 16

    (62) PRINT_FUN -> PRINT . LIST_VALUE ;
    (27) LIST_VALUE -> . ARITHMETIC_EXP
    (28) LIST_VALUE -> . ARITHMETIC_EXP , LIST_VALUE
    (50) ARITHMETIC_EXP -> . ARITHMETIC_EXP ARITHMETIC_OP ARITHMETIC_EXP
    (51) ARITHMETIC_EXP -> . ( ARITHMETIC_EXP )
    (52) ARITHMETIC_EXP -> . ARITHMETIC_OP_UNARY ARITHMETIC_EXP
    (53) ARITHMETIC_EXP -> . VALUE
    (48) ARITHMETIC_OP_UNARY -> . +
    (49) ARITHMETIC_OP_UNARY -> . -
    (17) VALUE -> . INT_GR
    (18) VALUE -> . FLOAT_GR
    (19) VALUE -> . ID_GR
    (20) VALUE -> . STRING_GR
    (21) VALUE -> . EYE ( ARITHMETIC_EXP )
    (22) VALUE -> . ZEROS ( ARITHMETIC_EXP )
    (23) VALUE -> . ONES ( ARITHMETIC_EXP )
    (24) VALUE -> . VECTOR
    (25) VALUE -> . ID_GR VECTOR
    (26) VALUE -> . VALUE '
    (14) INT_GR -> . INTNUM
    (15) FLOAT_GR -> . FLOATNUM
    (16) ID_GR -> . ID
    (13) STRING_GR -> . STRING
    (12) VECTOR -> . [ LIST_VALUE ]

    (               shift and go to state 35
    +               shift and go to state 38
    -               shift and go to state 39
    EYE             shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    INTNUM          shift and go to state 48
    FLOATNUM        shift and go to state 49
    ID              shift and go to state 18
    STRING          shift and go to state 50
    [               shift and go to state 51

    LIST_VALUE                     shift and go to state 33
    ARITHMETIC_EXP                 shift and go to state 34
    ARITHMETIC_OP_UNARY            shift and go to state 36
    VALUE                          shift and go to state 37
    INT_GR                         shift and go to state 40
    FLOAT_GR                       shift and go to state 41
    ID_GR                          shift and go to state 42
    STRING_GR                      shift and go to state 43
    VECTOR                         shift and go to state 47

state 17

    (63) RETURN_FUN -> RETURN . LIST_VALUE ;
    (27) LIST_VALUE -> . ARITHMETIC_EXP
    (28) LIST_VALUE -> . ARITHMETIC_EXP , LIST_VALUE
    (50) ARITHMETIC_EXP -> . ARITHMETIC_EXP ARITHMETIC_OP ARITHMETIC_EXP
    (51) ARITHMETIC_EXP -> . ( ARITHMETIC_EXP )
    (52) ARITHMETIC_EXP -> . ARITHMETIC_OP_UNARY ARITHMETIC_EXP
    (53) ARITHMETIC_EXP -> . VALUE
    (48) ARITHMETIC_OP_UNARY -> . +
    (49) ARITHMETIC_OP_UNARY -> . -
    (17) VALUE -> . INT_GR
    (18) VALUE -> . FLOAT_GR
    (19) VALUE -> . ID_GR
    (20) VALUE -> . STRING_GR
    (21) VALUE -> . EYE ( ARITHMETIC_EXP )
    (22) VALUE -> . ZEROS ( ARITHMETIC_EXP )
    (23) VALUE -> . ONES ( ARITHMETIC_EXP )
    (24) VALUE -> . VECTOR
    (25) VALUE -> . ID_GR VECTOR
    (26) VALUE -> . VALUE '
    (14) INT_GR -> . INTNUM
    (15) FLOAT_GR -> . FLOATNUM
    (16) ID_GR -> . ID
    (13) STRING_GR -> . STRING
    (12) VECTOR -> . [ LIST_VALUE ]

    (               shift and go to state 35
    +               shift and go to state 38
    -               shift and go to state 39
    EYE             shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    INTNUM          shift and go to state 48
    FLOATNUM        shift and go to state 49
    ID              shift and go to state 18
    STRING          shift and go to state 50
    [               shift and go to state 51

    LIST_VALUE                     shift and go to state 52
    ARITHMETIC_EXP                 shift and go to state 34
    ARITHMETIC_OP_UNARY            shift and go to state 36
    VALUE                          shift and go to state 37
    INT_GR                         shift and go to state 40
    FLOAT_GR                       shift and go to state 41
    ID_GR                          shift and go to state 42
    STRING_GR                      shift and go to state 43
    VECTOR                         shift and go to state 47

state 18

    (16) ID_GR -> ID .
